August_30/August_30/src/objects/Response__c.object
<CustomObject>
    <fields>
        <fullName>Maturity_Level__c</fullName>
        <label>Maturity Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponseAnswer__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ResponseQuestion__c</fullName>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vector1__c</fullName>
        <label>Vector1</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vector2__c</fullName>
        <label>Vector2</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Response</label>
    <nameField>
        <label>ResponseQuestion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>